--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0" // Make sure to replace ^your_version with the actual version, e.g., ^7.0.0
+    "mongoose": "^8.8.0" 
   }
 }
